--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,60 @@
 	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
 	crossorigin="anonymous">
 
+ <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/Style.css') }}">
+
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
 	integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
 	crossorigin="anonymous"></script>
 
 	<title>Cav-lender</title>
-	<header>WELCOME TO THE CAV-LENDER</header>
 </head>
 <body>
+	<div class="container-fluid">
+			 <div class="jumbotron">
+							<h1>WELCOME TO THE CAV-LENDER</h1>
+			 </div>
+			 <div class="row seven-cols">
+				 	<div class="col-md-1">
+					<p class = "Weekday">
+						Monday
+					</p>
+					</div>
+					<div class="col-md-1">
+						<p class = "Weekday">
+							Tuesday
+						</p>
+						</div>
+					<div class="col-md-1">
+						<p class = "Weekday">
+							Wednesday
+						</p>
+						</div>
+					<div class="col-md-1">
+						<p class = "Weekday">
+							Thursday
+						</p>
+						</div>
+					<div class="col-md-1">
+						<p class = "Weekday">
+							Friday
+						</p>
+						</div>
+					<div class="col-md-1">
+						<p class = "Weekday">
+							Saturday
+						</p>
+						</div>
+					<div class="col-md-1">
+						<p class = "Weekday">
+							Sunday
+						</p>
+					</div>
+			 </div>
+
+
+	</div>
+
 </body>
 </html>
