--- a/templates/index.html
+++ b/templates/index.html
@@ -25,45 +25,158 @@
 			 <div class="jumbotron">
 							<h1>WELCOME TO THE CAV-LENDER</h1>
 			 </div>
-			 <div class="row seven-cols">
-				 	<div class="col-md-1">
-					<p class = "Weekday">
-						Monday
-					</p>
-					</div>
-					<div class="col-md-1">
-						<p class = "Weekday">
-							Tuesday
-						</p>
-						</div>
-					<div class="col-md-1">
-						<p class = "Weekday">
-							Wednesday
-						</p>
-						</div>
-					<div class="col-md-1">
-						<p class = "Weekday">
-							Thursday
-						</p>
-						</div>
-					<div class="col-md-1">
-						<p class = "Weekday">
-							Friday
-						</p>
-						</div>
-					<div class="col-md-1">
-						<p class = "Weekday">
-							Saturday
-						</p>
-						</div>
-					<div class="col-md-1">
-						<p class = "Weekday">
-							Sunday
-						</p>
-					</div>
-			 </div>
 
+			 <!--test another method for the header -->
+			 <div class="col-md-12">
+					<div class="col-md-2">
+					</div>
+			 		<div class="col-md-1">
+			 			<p class = "Weekday">
+				 		Monday
+			 			</p>
+			 		</div>
+			 		<div class="col-md-1">
+				 		<p class = "Weekday">
+					 		Tuesday
+				 		</p>
+				 	</div>
+			 		<div class="col-md-1">
+				 		<p class = "Weekday">
+					 		Wednesday
+				 		</p>
+				  </div>
+			 	  <div class="col-md-1">
+				 		<p class = "Weekday">
+					 		Thursday
+				  	</p>
+				  </div>
+			 		<div class="col-md-1">
+				 		<p class = "Weekday">
+					 		Friday
+				 		</p>
+				  </div>
+			 		<div class="col-md-1">
+				 		<p class = "Weekday">
+					 		Saturday
+				 		</p>
+				 	</div>
+			 		<div class="col-md-1">
+				 		<p class = "Weekday">
+					 		Sunday
+				 		</p>
+			 		</div>
+			 		<div class="col-md-2">
+			 		</div>
+		   </div>
 
+		 	 <!-- A whole lot of calender days YAY JK KILL ME -->
+		  <div class="CalenderBody">
+			 	<!-- Row 1 -->
+					<div class="col-md-12">
+							<div class="col-md-2">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-2">
+							</div>
+			 		</div>
+	 		 	<!-- Row 2 -->
+					<div class="col-md-12">
+							<div class="col-md-2">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-2">
+							</div>
+						</div>
+			 	<!-- Row 3 -->
+					<div class="col-md-12">
+							<div class="col-md-2">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-2">
+							</div>
+						</div>
+			 	<!-- Row 4 -->
+					<div class="col-md-12">
+							<div class="col-md-2">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-2">
+							</div>
+						</div>
+			 	<!-- Row 5 -->
+					<div class="col-md-12">
+							<div class="col-md-2">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-1">
+							</div>
+							<div class="col-md-2">
+							</div>
+						</div>
+			</div>	
 	</div>
 
 </body>
