--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,13 @@
 	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
 	crossorigin="anonymous">
 
- <link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/Style.css') }}">
+ 	<link rel="stylesheet" type="text/css" href= "{{ url_for('static',filename='styles/Style.css') }}">
+
+
+
+	<script src="https://code.jquery.com/jquery-3.3.1.js"
+			  	integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+			  	crossorigin="anonymous"></script>
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
@@ -23,7 +29,7 @@
 <body>
 	<div class="container-fluid">
 			 <div class="jumbotron">
-							<h1>WELCOME TO THE CAV-LENDER</h1>
+							<h1>WELCOME TO THE CAVLENDER</h1>
 			 </div>
 
 			 <!--test another method for the header -->
@@ -70,25 +76,41 @@
 		   </div>
 
 		 	 <!-- A whole lot of calender days YAY JK KILL ME -->
-		  <div class="CalenderBody">
+		  <div class="CalenderBody" id="calenderB">
 			 	<!-- Row 1 -->
 					<div class="col-md-12">
 							<div class="col-md-2">
 							</div>
+							<div id="Week">
 							<div class="col-md-1">
+								<p id="1">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="2">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="3">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="4">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="5">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="6">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="7">
+								</p>
 							</div>
+						</div>
 							<div class="col-md-2">
 							</div>
 			 		</div>
@@ -96,20 +118,36 @@
 					<div class="col-md-12">
 							<div class="col-md-2">
 							</div>
+							<div id="Week2">
 							<div class="col-md-1">
+								<p id="8">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="9">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="10">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="12">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="13">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="14">
+								</p>
 							</div>
 							<div class="col-md-1">
+								<p id="15">
+								</p>
 							</div>
+						</div>
 							<div class="col-md-2">
 							</div>
 						</div>
@@ -117,6 +155,7 @@
 					<div class="col-md-12">
 							<div class="col-md-2">
 							</div>
+							<div id="Week3">
 							<div class="col-md-1">
 							</div>
 							<div class="col-md-1">
@@ -131,6 +170,7 @@
 							</div>
 							<div class="col-md-1">
 							</div>
+						</div>
 							<div class="col-md-2">
 							</div>
 						</div>
@@ -138,6 +178,7 @@
 					<div class="col-md-12">
 							<div class="col-md-2">
 							</div>
+							<div id="Week4">
 							<div class="col-md-1">
 							</div>
 							<div class="col-md-1">
@@ -152,13 +193,15 @@
 							</div>
 							<div class="col-md-1">
 							</div>
+						</div>
 							<div class="col-md-2">
 							</div>
 						</div>
 			 	<!-- Row 5 -->
-					<div class="col-md-12">
+					<div class="col-md-12" id = "R">
 							<div class="col-md-2">
 							</div>
+							<div id="Week5">
 							<div class="col-md-1">
 							</div>
 							<div class="col-md-1">
@@ -173,11 +216,13 @@
 							</div>
 							<div class="col-md-1">
 							</div>
+						</div>
 							<div class="col-md-2">
 							</div>
 						</div>
-			</div>	
+			</div>
 	</div>
 
 </body>
+<script type="text/javascript" src="{{ url_for('static', filename='Function/Function.js') }}"></script>
 </html>
